# plugin_example

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs
