[package]
name = "plugin_example"
version = "0.1.0"
edition = "2021"
description = "A spatial distance calculations plugin for Hayashi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Depende diretamente do SDK recém-publicado no GitHub
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
